# CoinClip

./: README  pyproject.toml  setup.cfg
configs/: default.yaml
configs/data/: coinvibe_default.yaml
configs/model/: coinclip_base.yaml
configs/train/: baseline.yaml
scripts/: evaluate.py  prepare_data.py  train.py
src/coinclip/: __init__.py
src/coinclip/data/: __init__.py  coinvibe_dataset.py  collate.py  transforms.py
src/coinclip/evaluation/: __init__.py  eval_pipeline.py
src/coinclip/models/: __init__.py  coinclip_model.py  encoders.py  fusion.py
src/coinclip/training/: __init__.py  losses.py  metrics.py  train_loop.py
src/coinclip/utils/: __init__.py  checkpointing.py  config.py  logging.py  seed.py
